Tidy api controllers
