# resources/swagger/paths/posts.yml
@@ -1,40 +1,74 @@
 paths:
   /posts:
     get:
-      summary: Get all posts
+      summary: Get all posts with pagination
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 1
+          description: The page number of results to retrieve (default is 1)
       responses:
         "200":
-          description: A list of posts
+          description: A paginated list of posts
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "../schemas/Post.yml"
+                type: object
+                properties:
+                  current_page:
+                    type: integer
+                    example: 1
+                  data:
+                    type: array
+                    items:
+                      $ref: "../schemas/Post.yml"
+                  total:
+                    type: integer
+                    example: 50
+                  per_page:
+                    type: integer
+                    example: 10
+                  last_page:
+                    type: integer
+                    example: 5
+        "401":
+          description: Unauthenticated
+
     post:
       summary: Create a new post
-      parameters:
-        - name: title
-          in: path
-          required: false
-          schema:
-            type: string
-            example: "test text title"
-        - name: content
-          in: path
-          required: false
-          schema:
-            type: string
-            example: "test text content"
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "../schemas/Post.yml"
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: "Post title text"
+                  description: "The title of the post."
+                content:
+                  type: string
+                  example: "Post content text"
+                  description: "The content of the post."
+              required:
+                - title
+                - content
       responses:
         "201":
-          description: Post created
+          description: Post created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "../schemas/Post.yml"
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthenticated
+
   /posts/{id}:
     get:
       summary: Get a post by ID
@@ -54,6 +88,7 @@ paths:
                 $ref: "../schemas/Post.yml"
         "404":
           description: Post not found
+
     patch:
       summary: Update a post
       parameters:
@@ -63,27 +98,39 @@ paths:
           schema:
             type: integer
             example: 1
-        - name: title
-          in: path
-          required: false
-          schema:
-            type: string
-            example: "change text title"
-        - name: content
-          in: path
-          required: false
-          schema:
-            type: string
-            example: "change text content"
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "../schemas/Post.yml"
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: "post title text"
+                  description: "The updated title of the post."
+                content:
+                  type: string
+                  example: "post content text"
+                  description: "The updated content of the post."
       responses:
         "200":
-          description: Post updated
+          description: Post updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "../schemas/Post.yml"
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthenticated
+        "403":
+          description: Forbidden - not authorized to update this post
+        "404":
+          description: Post not found
+        "422":
+          description: Unprocessable content - Either title or content is required
+
     delete:
       summary: Delete a post
       parameters:
@@ -94,7 +141,11 @@ paths:
             type: integer
             example: 1
       responses:
-        "204":
-          description: Post deleted
-        "400":
-          description: Title and content cannot both be empty
+        "200":
+          description: Post deleted successfully
+        "401":
+          description: Unauthenticated
+        "403":
+          description: Forbidden - not authorized to delete this post
+        "404":
+          description: Post not found
